--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,13 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+@font-face {
+  font-family: "Open Sans";
+  src: url("fonts/open-sans-regular.woff2") format("woff2");
+  font-display: swap;
+}
 
 @font-face {
   font-family: "DsDigi";
-  src: url("fonts/DS-DIGI.TTF") format("truetype");
+  src: url("fonts/ds-digi-webfont.woff2") format("woff2");
+  font-display: swap;
 }
 
 *,
@@ -11,25 +16,15 @@
   box-sizing: border-box;
 }
 
-html {
-  font-family: sans-serif;
-  line-height: 1.15;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  -ms-overflow-style: scrollbar;
-  -webkit-tap-highlight-color: transparent;
-}
-
-@-ms-viewport {
-  width: device-width;
-}
-
 html,
 body {
   height: 100%;
 }
 
 body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   margin: 0;
   padding: 0;
   background-color: #5dbec9;
